don't say future version of Perl

--- a/templates/include/alert.tmpl
+++ b/templates/include/alert.tmpl
@@ -2,7 +2,7 @@
 
 	<div class="alert">
 	<button class="close" data-dismiss="alert">×</button>
-	<strong>Note!</strong> This site is about <strong>Perl 6</strong>, the future version of Perl.<br>
+	<strong>Note!</strong> This site is about <strong>Perl 6</strong>.<br>
     If you are looking for a solution for the current production version of Perl 5, please check out
     the <a href="http://perlmaven.com/perl-tutorial">Perl 5 tutorial</a>.<br>
 % if %h<perl5url> {
