--- a/templates/include/footer.tmpl
+++ b/templates/include/footer.tmpl
@@ -5,6 +5,8 @@
     <div class="span3">
 % if %h<github_link> {
        <a class="btn btn-default" href="<%= %h<github_link> %>" role="button">Suggest a change</a>
+       <br>
+       Elapsed time: ELAPSED_TIME
 % }
 
        <h3>Perl 6 Tricks and Treats newsletter</h3>
