--- a/templates/include/header.tmpl
+++ b/templates/include/header.tmpl
@@ -16,7 +16,7 @@ pre {
 </style>
 <link href="/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
-<link rel="shortcut icon" href="/bootstrap/ico/favicon.ico">
+<link rel="shortcut icon" href="/favicon.ico">
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/bootstrap/ico/apple-touch-icon-144-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/bootstrap/ico/apple-touch-icon-114-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/bootstrap/ico/apple-touch-icon-72-precomposed.png">
