--- a/templates/include/header.tmpl
+++ b/templates/include/header.tmpl
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="/style.css" type="text/css" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/2.0.4/css/bootstrap.css" rel="stylesheet">
 <style>
 body {
   padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -14,13 +14,13 @@ pre {
   font-size: 15px;
 }
 </style>
-<link href="/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/2.0.4/css/bootstrap-responsive.css" rel="stylesheet">
 
 <link rel="shortcut icon" href="/favicon.ico">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/bootstrap/ico/apple-touch-icon-144-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/bootstrap/ico/apple-touch-icon-114-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/bootstrap/ico/apple-touch-icon-72-precomposed.png">
-<link rel="apple-touch-icon-precomposed" href="/bootstrap/ico/apple-touch-icon-57-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://maxcdn.bootstrapcdn.com/bootstrap/2.0.4/ico/apple-touch-icon-144-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://maxcdn.bootstrapcdn.com/bootstrap/2.0.4/ico/apple-touch-icon-114-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://maxcdn.bootstrapcdn.com/bootstrap/2.0.4/ico/apple-touch-icon-72-precomposed.png">
+<link rel="apple-touch-icon-precomposed" href="https://maxcdn.bootstrapcdn.com/bootstrap/2.0.4/ico/apple-touch-icon-57-precomposed.png">
 
 
 <title><%= %h<title> %></title>
