Perl 5 is not the 'current production version'

--- a/templates/include/alert.tmpl
+++ b/templates/include/alert.tmpl
@@ -3,8 +3,7 @@
 	<div class="alert">
 	<button class="close" data-dismiss="alert">×</button>
 	<strong>Note!</strong> This site is about <strong>Perl 6</strong>.<br>
-    If you are looking for a solution for the current production version of Perl 5, please check out
-    the <a href="http://perlmaven.com/perl-tutorial">Perl 5 tutorial</a>.<br>
+    If you are looking for a solution for Perl 5, please check out the <a href="http://perlmaven.com/perl-tutorial">Perl 5 tutorial</a>.<br>
 % if %h<perl5url> {
   Specifially there is a related article:
   <a href="<%= %h<perl5url> %>"><%= %h<perl5title> %></a>.
