add notification to top right corner

--- a/files/style.css
+++ b/files/style.css
@@ -5,3 +5,16 @@
 .pod {
 	font-size: 14px;
 }
+
+#notification {
+ background-color: #004065;
+ color: #FFF;
+         border-radius: 15px;
+    -moz-border-radius: 15px;
+ -webkit-border-radius: 15px;
+ padding: 10px;
+ text-align: center;
+ margin: 20px;
+}
+
+
