--- a/files/style.css
+++ b/files/style.css
@@ -7,8 +7,8 @@
 }
 
 #notification {
- background-color: #004065;
- color: #FFF;
+ background-color: #f4df41;
+ color: #000;
          border-radius: 15px;
     -moz-border-radius: 15px;
  -webkit-border-radius: 15px;
