remove crowdfunding link

--- a/templates/include/footer.tmpl
+++ b/templates/include/footer.tmpl
@@ -10,10 +10,9 @@
 % }
 
        <div id="notification">
-          <h3>Support my Perl 6 book!</h3>
-          I am writing a book on 
-           <a href="https://leanpub.com/bailador/">Web Application Development in Perl 6</a>
-           and raising money via <a href="/book">crowdfunding</a>. Please support my effort!
+          <h3>Buy my Perl 6 book!</h3>
+          <a href="https://leanpub.com/bailador/">Web Application Development in Perl 6</a>
+
        </div>
        <h3>Perl 6 Tricks and Treats newsletter</h3>
        Register to the free newsletter now, and get updates and news.
